syntax = "proto3";
package omniflix.flixdrop.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/OmniFlix/omniflixhub/x/flixdrop/types";

// Params defines the flixdrop module's parameters.
message Params {
  google.protobuf.Timestamp flixdrop_start_time  = 1 [
    (gogoproto.stdtime)  = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"flixdrop_start_time\""
  ];
  google.protobuf.Duration  duration_until_decay = 2 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "duration_until_decay,omitempty",
    (gogoproto.moretags)    = "yaml:\"duration_until_decay\""
  ];
  google.protobuf.Duration  duration_of_decay    = 3 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "duration_of_decay,omitempty",
    (gogoproto.moretags)    = "yaml:\"duration_of_decay\""
  ];
  // denom of claimable asset
  string                    claim_denom          = 4;
}